# WisdomSite

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  projects.xml  setup.sql  vcpkg-configuration.json  vcpkg.json
blog/: 1._Hello_world.md  2._Runtime_difficulties.md  3._So_many_ideas.md  4._Hello_anew.md  example.md  rss.xml
src/: index.cpp  markdown.cpp  markdown.hpp
static/: motd.html  rss.xml
static/components/: card.js  footer.js  header.js
static/css/: style.css
static/highlighting/: highlight.min.js
static/projects/rhythm/: Rytmipeli.html  Rytmipeli2-Sound.html  rhythm2.js
static/scripts/: script.js
static/things/: knowledge.html
templates/: 404.html  begin.html  blog.html  blogPost.html  contact.html  guestbook.html  index.html  motd.html  projects.html
